2005-08-19	Istvan Varga	<ivarga@csounds.com>
	* Engine/namedins.c, Engine/otran.c, Engine/rdorch.c:
	* Opcodes/fout.c, Opcodes/oscbnk.c:
	  removed unneeded/redundant RESET code
	* H/csound.h, H/csoundCore.h, Top/threads.c:
	* InOut/rtpa.c, InOut/widgets.cpp, InOut/OSCrecv.c, Opcodes/OSC.c:
	  attempts to clean up thread interface
	* H/prototyp.h:
	  moved declaration of csoundYield() here from csound.h
	* examples/fl_controller/fl_controller.cpp:
	  fixed a few minor errors

2005-08-18	Istvan Varga	<ivarga@csounds.com>
	* Engine/namedins.c:
	* Top/csound.c:
	* Top/main.c:
	  changes to allow host applications to register opcodes with
	  csoundAppendOpcode(); should be called between csoundPreCompile()
	  and csoundCompile()
	* Engine/oload.c:
	* H/csound.h:
	* H/csoundCore.h:
	  removed csoundLoadExternal() and csoundLoadExternals() from public
	  interface
	* H/opcode.h:
	  removed file
	* Top/opcode.c:
	  implemented csoundNewOpcodeList() and csoundDisposeOpcodeList()
	  currently, the opcodes can only be listed after loading an orchestra
	  with csoundCompile()

2005-08-12	Istvan Varga	<ivarga@csounds.com>
	* renamed struct ENVIRON_ to struct CSOUND_, and ENVIRON to CSOUND
	* replaced uses of void* Csound instance pointers with CSOUND*
	* changes to header files to clean up the API; more need to be done
	* attempts to fix CsoundVST build - still not quite right

2005-08-03	Steven Yi	<stevenyi@gmail.com>
	* Engine/Entry1.c, Engine/fgens.c, H/ftgen.h:
	  New ftfree opcode, takes in table number and free time arg,
	  if zero frees at opcode init time, otherwise at opcode deinit time

2005-08-01	Istvan Varga	<ivarga@csounds.com>
	* Minor fixes in DSSI opcodes (still have problems)
	* Engine/rdorch.c, Engine/entry1.c, Opcodes/uggab.c:
	  minor parser changes, including the addition of a new code (fffb)
	  for selecting opcode name based on the first input argument (i-, k-,
	  and a-rate, but not constant)
	* Engine/insert.c: